syntax = "proto3";

option csharp_namespace = "Dnsk.Proto";

package api;

message Nothing {}

service Api {
  rpc Auth_GetSession (Nothing) returns (Auth_Session);
  rpc Auth_Register (Auth_RegisterReq) returns (Nothing);
  rpc Auth_VerifyEmail (Auth_VerifyEmailReq) returns (Nothing);
  rpc Auth_SendResetPwdEmail (Auth_SendResetPwdEmailReq) returns (Nothing);
  rpc Auth_ResetPwd (Auth_ResetPwdReq) returns (Nothing);
  rpc Auth_SignIn (Auth_SignInReq) returns (Auth_Session);
  rpc Auth_SignOut (Nothing) returns (Auth_Session);
  rpc Auth_SetL10n (Auth_SetL10nReq) returns (Auth_Session);
}

message Auth_Session {
    string id = 1;
    bool isAuthed = 2;
    string lang = 3;
    string dateFmt = 4;
    string timeFmt = 5;
}

message Auth_RegisterReq {
    string email = 1;
    string pwd = 2;
}

message Auth_VerifyEmailReq {
    string email = 1;
    string code = 2;
}

message Auth_SendResetPwdEmailReq {
    string email = 1;
}

message Auth_ResetPwdReq {
    string email = 1;
    string code = 2;
    string newPwd = 3;
}

message Auth_SignInReq {
    string email = 1;
    string pwd = 2;
    bool rememberMe = 3;
}

message Auth_SetL10nReq {
    string lang = 1;
    string dateFmt = 2;
    string timeFmt = 3;
}

